# EPD_7IN5B_V2_test

./: .gitmodules  CMakeLists.txt  README.md  config.json  e_papaer_c  main.c  main.cpp
entity/Calendar/: Calendar.cpp
entity/Pic/: Config.cpp  Config.h  EinkPic.cpp  EinkPic.h
entity/Qweather/: Date.cpp  Weather.cpp
entity/Sentence/: Sentence.cpp  Sentence.h
entity/entity/Calendar/: Calendar.h
entity/entity/Pic/: Config.cpp
entity/entity/Qweather/: Date.cpp  Time_MinAndSec.cpp  Time_MinAndSec.h
entity/entity/entity/Calendar/: Calendar.cpp
entity/entity/entity/Pic/: Config.h  EinkPic.cpp  EinkPic.h
entity/entity/entity/Qweather/: Date.h  Weather.h
lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h  bcm2835.h
lib/Fonts/: fonts.h
lib/GUI/: GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.cpp  GUI_Paint.cpp.bak  GUI_Paint.h
lib/e-Paper/: EPD_5in83_V2.c  EPD_5in83_V2.h  EPD_7in5_V2.c  EPD_7in5_V2.h  EPD_7in5b_V2.c  EPD_7in5b_V2.h
src/: EPD_5in83_V2_test.c  EPD_5in83_V2_test.cpp  EPD_7in5b_V2_test.c  EPD_Test.h
